# uv-info

./: .gitignore  README.md  main.py  pyproject.toml
